--- a/Stratum.Test/Stratum.Test.csproj
+++ b/Stratum.Test/Stratum.Test.csproj
@@ -17,13 +17,13 @@
         </PackageReference>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
         <PackageReference Include="Moq" Version="4.20.72" />
-        <PackageReference Include="SixLabors.ImageSharp" Version="3.1.5" />
+        <PackageReference Include="SkiaSharp" Version="2.88.8" />
+        <PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="2.88.8" />
         <PackageReference Include="xunit" Version="2.9.2" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="ZXing.Net" Version="0.16.9" />
-        <PackageReference Include="ZXing.Net.Bindings.ImageSharp.V2" Version="0.16.16" />
+        <PackageReference Include="StratumAuth.ZXing" Version="1.0.0" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\Stratum.Core\Stratum.Core.csproj" />
