--- a/Stratum.Test/Stratum.Test.csproj
+++ b/Stratum.Test/Stratum.Test.csproj
@@ -19,6 +19,8 @@
         <PackageReference Include="Moq" Version="4.20.72" />
         <PackageReference Include="SkiaSharp" Version="2.88.8" />
         <PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="2.88.8" />
+        <PackageReference Include="SkiaSharp.NativeAssets.macOS" Version="2.88.9" />
+        <PackageReference Include="SkiaSharp.NativeAssets.Win32" Version="2.88.9" />
         <PackageReference Include="xunit" Version="2.9.2" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
             <PrivateAssets>all</PrivateAssets>
