--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,7 +82,7 @@ jobs:
           draft: true
 
   fdroid:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs: build 
     steps:
       - name: Checkout
