--- a/Stratum.Core/Stratum.Core.csproj
+++ b/Stratum.Core/Stratum.Core.csproj
@@ -6,6 +6,7 @@
         <LangVersion>13</LangVersion>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="HtmlAgilityPack" Version="1.11.72" />
         <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.1" />
         <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="9.0.0">
             <PrivateAssets>all</PrivateAssets>
