--- a/Stratum.Test/Stratum.Test.csproj
+++ b/Stratum.Test/Stratum.Test.csproj
@@ -135,5 +135,8 @@
         <None Update="data\keepass.twofish.argon2d.kdbx">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="data\keepass.norecyclebin.kdbx">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 </Project>
