--- a/Stratum.Test/Stratum.Test.csproj
+++ b/Stratum.Test/Stratum.Test.csproj
@@ -138,5 +138,8 @@
         <None Update="data\keepass.norecyclebin.kdbx">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="data\keepass.groups.kdbx">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 </Project>
