fix fdroid sync

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -106,7 +106,7 @@ jobs:
           sudo apt-get -yqq install fdroidserver
 
           # TEMP: fix androguard compatibility
-          sudo pip install androguard==4.1.2 --break-system-packages
+          sudo pip install androguard==4.1.3 --break-system-packages --ignore-installed
 
       - name: Prepare config
         run: |
